kubernetes/better-minecraft-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
spec:
  type: ClusterIP
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: better-minecraft
  selector:
    app: better-minecraft
