kubernetes/better-minecraft-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minecraft-ingress
  labels:
    app: better-minecraft
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-service
                port: 
                  number: 25565
